2_monitoring/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - image: grafana/grafana
        name: grafana
        volumeMounts:
        - name: data
          mountPath: /var/lib/grafana
        - name: grafana
          mountPath: /etc/grafana/grafana.ini
          subPath: grafana.ini
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: grafana
      - name: grafana
        configMap:
          name: grafana
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
  - port: 3000
  selector:
    app: grafana
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-forward-auth-mw
  namespace: monitoring
spec:
  forwardAuth:
    address: http://forward-auth.kube-system.svc.cluster.local:4181
    trustForwardHeader: true
    authResponseHeaders:
    - X-Forwarded-User
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-strip-mw
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
    - "/grafana"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`zerohertz.ddns.net`) && PathPrefix(`/grafana`)
    kind: Rule
    middlewares:
    - name: grafana-forward-auth-mw
    - name: grafana-strip-mw
    services:
    - name: grafana
      port: 3000
  tls:
    certResolver: zerohertz-resolver
